[package]
name = "cch23-kc88"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
base64 = "0.21.5"
image = "0.25.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = { version = "0.41.0", default-features = false, features = ["axum-0-6"] }
shuttle-runtime = "0.41.0"
tokio = "1.28.2"
tower-http = { version = "0.4", features = [ "full"] }
tracing = "0.1.40"
